# BattleBotsSim

./: ..githubignore.un~  .gitignore  .gitmodules  FTC_Simulator - Shortcut.lnk  InstallSetupFile.iss
Archive/Sim/: ai_robot.py  game.py  game_object.py  main.py  robot.py  (+1 more)
Assets/: PostProcessing.asset  Rendering Pipeline.asset  URP Defaults_Renderer.asset
Common/: CircularDeque.h  Communication.h  README.md
Communication/: CircularDeque.h  CircularDequeTest.cc  Communication.h  GenericReceiver.h  GenericReceiverTest.cc  README.md  Radio.h  SetupCommonHeaders.py  flash_all.py  platformio.ini
FTC_Simulator/: .gitignore
MachineLearning/: PointNet.py  graph
ProjectSettings/: GraphicsSettings.asset  InputManager.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
RobotController/: .buildDebug.bat.swp  .clang-format  .cursorignore  Acquisition.cpp  CMakeLists.txt  CMakeLists_NoVision.txt  CVPosition.cc  CVPosition.h  CVRotation.cc  CVRotation.h  CameraDecoder.cc  CameraDecoder.h  CameraReceiver.cc  CameraReceiver.h  CameraReceiverLinux.cc  CameraReceiverLinux.h  Clock.cc  Clock.h  CodebaseNotes.txt  ConfigureCamera.cc  Corner.cc  Corner.h  CornerTracker.cc  CornerTracker.h  DriverStationLog.cc  DriverStationLog.h  Extrapolator.h  Gamepad.cc  Gamepad.h  Globals.cc  Globals.h  GuiUtils.cc  GuiUtils.h  Makefile  MakefileLinux  MatQueue.h  MathUtils.cc  MathUtils.h  Mouse.cc  Mouse.h  (+86 more)
RobotController/Archive/: StateMachine.h  Vision3d.h  VisionArchive.h
RobotController/Archive/Graphics/: Camera.cc  GameLoop.h  cubeVertices.h
RobotController/Archive/Graphics/Model/: Object.cc  Object.h
RobotController/Archive/Graphics/Shader/: Basic.shader
RobotController/Archive/Graphics/Window/: Window.cc  Window.h
RobotController/Archive/RadioExperiment/: test.cc
RobotController/Graphics/: Camera.h  GameLoop.cc  GameLoop.h  Main.cc  Makefile  cubeVertices.h
RobotController/Graphics/Model/: Object.cc  Object.h  OpenGLModel.cc  OpenGLModel.h
RobotController/Graphics/Shader/: Basic.shader
RobotController/Graphics/Window/: Clock.cc  Window.cc  Window.h
RobotController/IPCamera/: Acquisition.cpp  CMakeLists.txt  CameraSettings_10_30_2024  build.sh  cameraLUT.lut
RobotController/Input/: Gamepad.cc  Gamepad.h  Input.cc  Input.h  InputState.cc  InputState.h  joystick  joystick_test.cc
RobotController/MachineLearning/: .gitignore  CMakeLists.txt  CVPosition.py  DataPreprocessor.cc  OnnxValidator.py  RobotPositionModel.py  RobotRotationModel.py  Simulation.py  Utilities.py  Visualization.py  buildPreprocessor.bat  data.yaml  geneticBasic.py  geneticLearning.py  imageRotationNet.py  position_model.onnx  requirements.txt  rotationDetectorV5.onnx  rotationVideoVisualizer.py  rotation_model.onnx  rotation_model_hoop.onnx  test.py  train_yolo.ipynb  train_yolo.py
RobotController/MachineLearning/DataPreprocessor/: CMakeLists.txt  DataPreprocessor.cc
RobotController/MachineLearning/train_yolo/: .gitignore  README.md  data.yaml  data_generation.py  requirements.txt  train_yolo.ipynb  train_yolo.py
RobotController/Odometry/: OdometryBase.cc  OdometryBase.h  OdometryData.cc  OdometryData.h  OdometryLogger.cc  OdometryLogger.h
RobotController/Odometry/BlobDetection/: BlobDetection.cc  BlobDetection.h  MotionBlob.h  RobotClassifier.cc  RobotClassifier.h
RobotController/Odometry/BruteForceRotation/: BruteForceRotation.cc  BruteForceRotation.h
RobotController/Odometry/Heuristic1/: HeuristicOdometry.cc  HeuristicOdometry.h  HeuristicOdometry_and_RobotTracker.txt  RobotTracker.cc  RobotTracker.h
RobotController/Odometry/Human/: HumanPosition.cc  HumanPosition.h
RobotController/Odometry/Human/Receiver/: HumanPosition - Copy.txt  HumanPosition.py  HumanPosition_old.py  TestSending.py  TrackingPython.py
RobotController/Odometry/IMU/: OdometryIMU.cc  OdometryIMU.h
RobotController/Odometry/LKFlowTracker/: LKFlowTracker.cc  LKFlowTracker.h
RobotController/Odometry/ManualOverride/: ManualOverrideOdometry.cc  ManualOverrideOdometry.h
RobotController/Odometry/Neural/: CVPosition.cc  CVPosition.h
RobotController/Odometry/OpenCVTracker/: OpenCVTracker.cc  OpenCVTracker.h
RobotController/PythonVision/: config.py  frame_diff_mask.py  lk_flow_tracker.py  main.py  orb_tracker.py  roi_selector.py  template_tracker.py  tracker_base.py  utils.py  video_reader.py
RobotController/RadioExperiment/: test.cc
RobotController/RobotLink/: IRobotLink.cc  IRobotLink.h  RobotLinkReal.cc  RobotLinkReal.h  RobotLinkSim.cc  RobotLinkSim.h
RobotController/Strategies/: AStar.cc  AStar.h  AStarAttack.cc  AStarAttack.h  Approach.cc  Approach.h  DisplayUtils.cc  DisplayUtils.h  DriveToAngleSimulation.cc  DriveToAngleSimulation.h  Extrapolate.cc  Extrapolate.h  Field.cc  Field.h  FieldState.cc  FieldState.h  FilteredRobot.cc  FilteredRobot.h  FollowPoint.cc  FollowPoint.h  Kill.cc  Kill.h  Line.cc  Line.h  Node.cc  Node.h  Orbit.cc  Orbit.h  PairHash.h  PointHash.h  RobotMovement.cc  RobotMovement.h  ScoreRegion.cc  ScoreRegion.h  Strategy.h  oppModel.h
RobotController/TestSerial/Reader/: Reader.ino
RobotController/TestSerial/Saver/: Saver.ino
RobotController/UIWidgets/: AStarAttackWidget.cc  AStarAttackWidget.h  CameraWidget.cc  CameraWidget.h  ClockWidget.cc  ClockWidget.h  ColorScheme.cc  ColorScheme.h  ConfigWidget.cc  ConfigWidget.h  DebugVariant.cc  DebugVariant.h  FieldWidget.cc  FieldWidget.h  FrameCompositor.cc  FrameCompositor.h  GraphWidget.cc  GraphWidget.h  IMUWidget.cc  IMUWidget.h  ImageWidget.cc  ImageWidget.h  KillWidget.cc  KillWidget.h  ManualControlWidget.cc  ManualControlWidget.h  ODataWidget.cc  ODataWidget.h  PlaybackWidget.cc  PlaybackWidget.h  PurePursuitRadiusWidget.cc  PurePursuitRadiusWidget.h  RobotControllerGUI.cc  RobotControllerGUI.h  RobotTelemetryWidget.cc  RobotTelemetryWidget.h  StatusIndicatorWidget.cc  StatusIndicatorWidget.h  TrackingFieldCropEditor.cc  TrackingFieldCropEditor.h  (+10 more)
RobotController/hid/: Makefile  hid.cc  hid.h  rawhid_test.c
RobotController/scripts/: gen_compile_commands.py
UserSettings/: EditorUserSettings.asset
(+1866 files in other folders)
